--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,7 +1,5 @@
-.thinkingBox {
-  word-break: break-all;
-  white-space: pre;
- .ant-bubble-content {
-        min-height: 20px !important;
-      }
+
+textarea {
+  font-size: 16px;
 }
+
