--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -49,7 +49,29 @@ textarea::-ms-input-placeholder { /* Edge */
     background-color: transparent !important;
   }
 }
+.sender-content {
+  textarea {
+    padding-right: 10px !important;
 
+  }
+
+   textarea::-webkit-scrollbar-track {
+            background-color: transparent;
+        }
+        textarea::-webkit-scrollbar-thumb {
+            border-radius: 4px;
+            background: rgba(0, 0, 0, 0.15);
+        }
+
+        textarea::-webkit-scrollbar-button {
+            height: 0;
+        }
+        textarea::-webkit-scrollbar {
+            width: 4px;
+        }
+
+
+}
 // .header {
 //   height: 64px;
 //   width: 100%;
