--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -3,3 +3,32 @@ textarea {
   font-size: 16px;
 }
 
+.videoBg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 420px;
+  object-fit: cover;
+}
+.mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 420px;
+  width: 100%;
+  background-color: rgba(0,0,0,0.5);
+
+}
+
+.section-one {
+  position: relative;
+}
+.section-one_inner {
+  position: relative;
+  // position: absolute;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+  // margin: 30px 0;
+}
