--- a/src/pages/excel/index.less
+++ b/src/pages/excel/index.less
@@ -119,7 +119,7 @@
       }
 
       .sub-status {
-        color: @text-secondary;
+        color: #ffffffcc;
         font-size: 14px;
       }
     }
