--- a/src/pages/chat/index.less
+++ b/src/pages/chat/index.less
@@ -4,6 +4,7 @@
   // padding-left: 48px;
  .ant-bubble-content {
         min-height: 20px !important;
+        width: 100%;
       }
 }
 .ant-bubble-content {
