--- a/src/pages/excel/index.less
+++ b/src/pages/excel/index.less
@@ -15,7 +15,7 @@
 // 主卡片样式
 .main-card {
   width: 100%;
-  width: 350px;
+  // width: 350px;
   height: 380px;
   flex-shrink: 0;
   background-color: @bg-light;
