--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -7,15 +7,20 @@ textarea {
   position: absolute;
   top: 0;
   left: 0;
+  top: 0;
+  right: 0;
   width: 100%;
-  height: 420px;
+  // height: 420px;
   object-fit: cover;
+  height: 100%;
 }
 .mask {
   position: absolute;
   top: 0;
   left: 0;
-  height: 420px;
+  right: 0;
+  bottom: 0;
+  // height: 420px;
   width: 100%;
   background-color: rgba(0,0,0,0.5);
 
@@ -31,4 +36,78 @@ textarea {
   // left: 50%;
   // transform: translate(-50%, -50%);
   // margin: 30px 0;
+}
+.arrow {
+  display: flex;
+  align-content: flex-end;
+  justify-content: center;
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 100px;
+  // transform: translateX(-50%);
+  //  animation: bounceDown 2s infinite;
+  img {
+    width: 50px;
+    height: 50px;
+        filter: contrast(0.5);
+        //  transform: translateX(-50%);
+   animation: bounceDown 2s infinite;
+  }
+}
+
+@keyframes bounceDown {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+
+  100% {
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+}
+
+
+.snap-container {
+  scroll-behavior: smooth;
+  overflow-y: scroll;
+  height: 100vh;
+}
+
+.snap-section {
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
+}
+
+.snap-container {
+  scroll-snap-type: y mandatory;
+}
+
+// 为 header 也添加 snap-section 类
+.section-one {
+  position: relative;
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
+}
+
+.link {
+  width: 100%;
+  text-align: center;
+  // position: absolute;
+  display: block;
+  left: 30px;
+  bottom: 20px;
+  background-color: #1e2939;
+  padding: 10px 0;
+  a {
+    text-decoration: underline;
+  }
 }
